force-app/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Allow_Deletion_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Deletion_of_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete PSA Assignments in Concur.</description>
    <inlineHelpText>Delete PSA Assignments in Concur.</inlineHelpText>
    <label>Allow Deletion of Assignments</label>
    <type>Checkbox</type>
</CustomField>