force-app/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Expense_Report_Billable_Mapping__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Report_Billable_Mapping__c</fullName>
    <defaultValue>&quot;Yes:true&quot;</defaultValue>
    <description>Concur to PSA Expense Report Billable Mapping.</description>
    <inlineHelpText>Concur to PSA Expense Report Billable Mapping.</inlineHelpText>
    <label>Expense Report Billable Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>